crates/test-files/fixtures/compile_errors/struct_private_constructor.fe
struct House {
    vacant: bool
    pub price: u256
}

contract Foo {
    pub fn bar() {
        let my_house: House = House(vacant: true, price: 1000000)
    }
}
